--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -119,6 +119,15 @@
 	}\bigskip
 }
 
+\newcommand{\note}[1]{
+	\noindent
+		\parbox{\textwidth}{%
+			{\scriptsize \textit{
+				#1
+			}}	
+		}\bigskip
+}
+
 
 \title{Mathematics Notes}
 \date{\vspace{-6ex}}
